overflow fixed

--- a/src/less/common/page.less
+++ b/src/less/common/page.less
@@ -9,5 +9,5 @@
   background-size: 53px 134px;
   background-position: calc(100vw - 100px);
   background-attachment: fixed;
-  overflow: hidden;
+  overflow-x: hidden;
 }
